Fix - MAILWEB-584 - collapsed labels for mail

--- a/_sass/pm-styles/_pm-badges.scss
+++ b/_sass/pm-styles/_pm-badges.scss
@@ -1,6 +1,7 @@
 /*
  * badges/labels
  */
+$border-width: 2px !default;
 [class*="badgeLabel"]:not([class*="pm-badgeLabel-"]) {
   @extend .uppercase;
   @extend .color-white;
@@ -9,31 +10,91 @@
   padding: 0 em(2) em(1);
   line-height: 1;
   border-radius: $global-border-radius;
-  border-width: 2px;
+  border-width: $border-width;
   border-style: solid;
-  //max-width: 15em;
 }
 
 // only for labels in conversations
+$badges-border-radius: 1rem !default;
+$badges-max-width: 15em !default;
 .pm-badgeLabel-container  {
-  [class*="badgeLabel"] {
-    border-radius: 1rem;
-	padding: .1rem .2rem;
-	max-width: 15rem;
-	flex-wrap: nowrap;
-  }
-}
-.pm-badgeLabel-link,
-.pm-badgeLabel-link:active,
-.pm-badgeLabel-link:hover,
-.pm-badgeLabel-link:focus {
-  color: $white;
-  text-decoration: none;
+	[class*="badgeLabel"] {
+		border-radius: $badges-border-radius;
+		padding: .1rem .2rem;
+		max-width: $badges-max-width;
+		flex-wrap: nowrap;
+		min-width: 1em; // if really short label ^^
+		border-color: currentColor;
+	}
+	.badgeLabel {
+		background: currentColor;
+		color: currentColor;
+		margin-left: .25em;
+	}
+  	.pm-badgeLabel-link,
+	.pm-badgeLabel-link:active,
+	.pm-badgeLabel-link:hover,
+	.pm-badgeLabel-link:focus {
+			color: $white;
+			text-decoration: none;
+			text-align: center;
 
-  &:not(:last-child) {
-    padding-right: .4rem;
-  }
+		&:not(:last-child) {
+			padding-right: .4rem;
+		}
+	}
 }
+// collapsed version
+.pm-badgeLabel-container--collapsed {
+	.badgeLabel {
+		position: relative;
+		margin-left: 0;
+
+		&:not(:first-child) {
+			border-top-left-radius: 0;
+			border-bottom-left-radius: 0;
+
+			&::before {
+				content: '';
+				background: currentColor;
+				position: absolute;
+				top: -$border-width;
+				bottom: -$border-width;
+				left: calc(-0.2rem - 1rem);
+				width: 1em;
+			}
+			> * {
+				position: relative;
+				overflow: hidden;
+				max-width: 0;
+				transition: max-width .5s ease, min-width .5s ease;
+				transition-delay: 0s, 0s, .5s;
+				min-width: 0;
+				padding-right: 0;
+			}
+			&:hover,
+			&:focus,
+			&:focus-within,
+			&:active {
+				> * {
+					max-width: $badges-max-width;
+					min-width: 1rem; // if really short label ^^
+					transition-delay: 0s;
+				}
+				> .pm-badgeLabel-link {
+					padding-right: .4rem;
+				}
+			}
+		}
+		@for $i from 1 through 20 {
+			&:nth-child(#{$i}) {
+			  z-index: #{20 - $i};
+			}
+		}
+	}
+
+}
+
 
 .badgeLabel-success {
   @extend .bg-global-success;
